<resources>
    <string name="app_name">HeaveyEqupments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_log">Save Log</string>
    <string name="log_information">Log Information</string>
    <string name="title_required">Title required</string>
    <string name="description_optional">Description optional</string>
    <string name="parts_changed">Parts Changed</string>
    <string name="add_part">Add Part</string>
    <string name="mechanics_involved">Mechanics Involved</string>
    <string name="add_mechanic">Add mechanic</string>
    <string name="other_expenses">Other expenses</string>
    <string name="add_expense">Add expense</string>
    <string name="photo_attachments">Photo attachments</string>
    <string name="old_parts_photos">Old Parts photos</string>
    <string name="add_parts_photo">Add parts photo</string>
    <string name="invoice_document_photos">Invoice document photos</string>
    <string name="add_invoice_photo">Add invoice photo</string>
    <string name="part_name">Part Name</string>
    <string name="cost_optional">Cost optional</string>
    <string name="remove_part">Remove Part</string>
    <string name="error_title_required">Error title required</string>
    <string name="start_time_display">Start time display</string>
    <string name="mechanic_name_required">Mechanic Name</string>
    <string name="service_cost_optional">Service Cost (Optional)</string>
    <string name="remove_mechanic">Remove Mechanic</string>
    <string name="expense_name_required">Expense Item Name (e.g., Shop Supplies)</string>
    <string name="cost_optional_usd">Cost ($)</string>
    <string name="description_optional_details">Description/Notes (Optional)</string>
    <string name="remove_expense">Remove Expense</string>
    <string name="item_count_display">Items Changed: %d</string>
    <string name="start_time_short">Start: %s</string>
    <string name="maintenance_start_time">Start Time</string>
    <string name="select_start_time">Selecet Start time</string>
    <string name="maintenance_end_time_optional">End Time</string>
    <string name="select_end_time">Select end time</string>
    <string name="error_end_before_start">Error End before Start Time</string>
    <string name="title_edit_log">Edit Log</string>
    <string name="update_log">Update Log</string>
    <string name="title_add_new_log">Add new log</string>

</resources>